# name: TestGetContributions.test_get_multiple_rows
  dict({
    'json': dict({
      'card_count_by_type': dict({
        'CARD': 10,
        'CARDBACK': 2,
        'TOKEN': 1,
      }),
      'sources': list([
        dict({
          'avgdpi': '572.73',
          'description': 'Description for example_drive_1',
          'external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'identifier': '1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'name': 'Example Drive 1',
          'qty_cardbacks': '1',
          'qty_cards': '9',
          'qty_tokens': '1',
          'size': '0.05 GB',
          'source_type': 'Google Drive',
        }),
        dict({
          'avgdpi': '350.00',
          'description': 'Description for example_drive_2',
          'external_link': None,
          'identifier': '18wZl7T9DU_lf2X5xYFiyH6pATVy8ZlOd',
          'name': 'Example Drive 2',
          'qty_cardbacks': '1',
          'qty_cards': '1',
          'qty_tokens': '0',
          'size': '0.01 GB',
          'source_type': 'Google Drive',
        }),
      ]),
      'total_database_size': 58000000,
    }),
    'status_code': 200,
  })
# ---
# name: TestGetContributions.test_get_one_row
  dict({
    'json': dict({
      'card_count_by_type': dict({
        'CARD': 2,
        'CARDBACK': 0,
        'TOKEN': 0,
      }),
      'sources': list([
        dict({
          'avgdpi': '600.00',
          'description': 'Description for example_drive_1',
          'external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'identifier': '1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'name': 'Example Drive 1',
          'qty_cardbacks': '0',
          'qty_cards': '2',
          'qty_tokens': '0',
          'size': '0.01 GB',
          'source_type': 'Google Drive',
        }),
      ]),
      'total_database_size': 10000000,
    }),
    'status_code': 200,
  })
# ---
# name: TestGetContributions.test_get_source_with_no_cards
  dict({
    'json': dict({
      'card_count_by_type': dict({
        'CARD': 0,
        'CARDBACK': 0,
        'TOKEN': 0,
      }),
      'sources': list([
        dict({
          'avgdpi': 0,
          'description': 'Description for example_drive_1',
          'external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'identifier': '1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'name': 'Example Drive 1',
          'qty_cardbacks': '0',
          'qty_cards': '0',
          'qty_tokens': '0',
          'size': '0.00 GB',
          'source_type': 'Google Drive',
        }),
        dict({
          'avgdpi': 0,
          'description': 'Description for example_drive_2',
          'external_link': None,
          'identifier': '18wZl7T9DU_lf2X5xYFiyH6pATVy8ZlOd',
          'name': 'Example Drive 2',
          'qty_cardbacks': '0',
          'qty_cards': '0',
          'qty_tokens': '0',
          'size': '0.00 GB',
          'source_type': 'Google Drive',
        }),
      ]),
      'total_database_size': 0,
    }),
    'status_code': 200,
  })
# ---
# name: TestGetContributions.test_with_no_sources
  dict({
    'json': dict({
      'card_count_by_type': dict({
        'CARD': 0,
        'CARDBACK': 0,
        'TOKEN': 0,
      }),
      'sources': list([
      ]),
      'total_database_size': 0,
    }),
    'status_code': 200,
  })
# ---
# name: TestGetDFCPairs.test_get_multiple_rows
  dict({
    'json': dict({
      'dfc_pairs': dict({
        'Delver of Secrets': 'Insectile Aberration',
        'Huntmaster of the Fells': 'Ravager of the Fells',
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestGetImportSites.test_get_multiple_sites
  dict({
    'json': dict({
      'import_sites': list([
        dict({
          'name': 'Aetherhub',
          'url': 'https://aetherhub.com',
        }),
        dict({
          'name': 'Archidekt',
          'url': 'https://archidekt.com',
        }),
        dict({
          'name': 'CubeCobra',
          'url': 'https://cubecobra.com',
        }),
        dict({
          'name': 'Deckstats',
          'url': 'https://deckstats.net',
        }),
        dict({
          'name': 'MagicVille',
          'url': 'https://magic-ville.com',
        }),
        dict({
          'name': 'ManaStack',
          'url': 'https://manastack.com',
        }),
        dict({
          'name': 'Moxfield',
          'url': 'https://www.moxfield.com',
        }),
        dict({
          'name': 'MTGGoldfish',
          'url': 'https://www.mtggoldfish.com',
        }),
        dict({
          'name': 'Scryfall',
          'url': 'https://scryfall.com',
        }),
        dict({
          'name': 'TappedOut',
          'url': 'https://tappedout.net',
        }),
        dict({
          'name': 'TCGPlayer',
          'url': 'https://decks.tcgplayer.com/',
        }),
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestGetSampleCards.test_get_five_sample_cards
  dict({
    'CARD': dict({
      'Brainstorm': dict({
        'card_type': 'CARD',
        'date': '1st January, 2023',
        'download_link': 'https://drive.google.com/uc?id=1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5&export=download',
        'dpi': 600,
        'extension': 'png',
        'identifier': '1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
        'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
        'name': 'Brainstorm',
        'priority': 2,
        'searchq': 'brainstorm',
        'size': 5000000,
        'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
        'source': 'example_drive_1',
        'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
        'source_id': 0,
        'source_name': 'Example Drive 1',
        'source_type': 'Google Drive',
        'source_verbose': 'Example Drive 1 but verbose',
      }),
      'Island': dict({
        'card_type': 'CARD',
        'date': '1st January, 2023',
        'download_link': 'https://drive.google.com/uc?id=1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa&export=download',
        'dpi': 600,
        'extension': 'png',
        'identifier': '1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
        'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
        'name': 'Island',
        'priority': 7,
        'searchq': 'island',
        'size': 5000000,
        'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
        'source': 'example_drive_1',
        'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
        'source_id': 0,
        'source_name': 'Example Drive 1',
        'source_type': 'Google Drive',
        'source_verbose': 'Example Drive 1 but verbose',
      }),
      'Island (William Bradford)': dict({
        'card_type': 'CARD',
        'date': '1st January, 2023',
        'download_link': 'https://drive.google.com/uc?id=1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0&export=download',
        'dpi': 600,
        'extension': 'png',
        'identifier': '1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
        'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
        'name': 'Island (William Bradford)',
        'priority': 6,
        'searchq': 'island',
        'size': 5000000,
        'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
        'source': 'example_drive_1',
        'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
        'source_id': 0,
        'source_name': 'Example Drive 1',
        'source_type': 'Google Drive',
        'source_verbose': 'Example Drive 1 but verbose',
      }),
      'Past in Flames': dict({
        'card_type': 'CARD',
        'date': '1st January, 2023',
        'download_link': 'https://drive.google.com/uc?id=1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1&export=download',
        'dpi': 600,
        'extension': 'png',
        'identifier': '1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1',
        'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1',
        'name': 'Past in Flames',
        'priority': 2,
        'searchq': 'past in flames',
        'size': 5000000,
        'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1',
        'source': 'example_drive_1',
        'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
        'source_id': 0,
        'source_name': 'Example Drive 1',
        'source_type': 'Google Drive',
        'source_verbose': 'Example Drive 1 but verbose',
      }),
    }),
    'TOKEN': dict({
      'Goblin': dict({
        'card_type': 'TOKEN',
        'date': '1st January, 2023',
        'download_link': 'https://drive.google.com/uc?id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA&export=download',
        'dpi': 600,
        'extension': 'png',
        'identifier': '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
        'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
        'name': 'Goblin',
        'priority': 2,
        'searchq': 'goblin',
        'size': 5000000,
        'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
        'source': 'example_drive_1',
        'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
        'source_id': 0,
        'source_name': 'Example Drive 1',
        'source_type': 'Google Drive',
        'source_verbose': 'Example Drive 1 but verbose',
      }),
    }),
  })
# ---
# name: TestGetSearchEngineHealth.test_elasticsearch_healthy
  dict({
    'json': dict({
      'online': True,
    }),
    'status_code': 200,
  })
# ---
# name: TestGetSources.test_get_multiple_sources
  dict({
    'json': dict({
      'results': dict({
        '0': dict({
          'description': 'Description for example_drive_1',
          'external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'identifier': '1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'key': 'example_drive_1',
          'name': 'Example Drive 1',
          'pk': 0,
          'source_type': 'Google Drive',
        }),
        '1': dict({
          'description': 'Description for example_drive_2',
          'external_link': None,
          'identifier': '18wZl7T9DU_lf2X5xYFiyH6pATVy8ZlOd',
          'key': 'example_drive_2',
          'name': 'Example Drive 2',
          'pk': 1,
          'source_type': 'Google Drive',
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestNewCardsFirstPages.test_basic_case
  dict({
    'json': dict({
      'results': dict({
        'example_drive_1': dict({
          'cards': list([
            dict({
              'card_type': 'CARD',
              'date': '1st January, 2023',
              'download_link': 'https://drive.google.com/uc?id=1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5&export=download',
              'dpi': 600,
              'extension': 'png',
              'identifier': '1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
              'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
              'name': 'Brainstorm',
              'priority': 2,
              'searchq': 'brainstorm',
              'size': 5000000,
              'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
              'source': 'example_drive_1',
              'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
              'source_id': 0,
              'source_name': 'Example Drive 1',
              'source_type': 'Google Drive',
              'source_verbose': 'Example Drive 1 but verbose',
            }),
            dict({
              'card_type': 'CARD',
              'date': '1st January, 2023',
              'download_link': 'https://drive.google.com/uc?id=1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa&export=download',
              'dpi': 600,
              'extension': 'png',
              'identifier': '1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
              'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
              'name': 'Island',
              'priority': 7,
              'searchq': 'island',
              'size': 5000000,
              'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
              'source': 'example_drive_1',
              'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
              'source_id': 0,
              'source_name': 'Example Drive 1',
              'source_type': 'Google Drive',
              'source_verbose': 'Example Drive 1 but verbose',
            }),
            dict({
              'card_type': 'CARD',
              'date': '1st January, 2023',
              'download_link': 'https://drive.google.com/uc?id=1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0&export=download',
              'dpi': 600,
              'extension': 'png',
              'identifier': '1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
              'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
              'name': 'Island (William Bradford)',
              'priority': 6,
              'searchq': 'island',
              'size': 5000000,
              'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
              'source': 'example_drive_1',
              'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
              'source_id': 0,
              'source_name': 'Example Drive 1',
              'source_type': 'Google Drive',
              'source_verbose': 'Example Drive 1 but verbose',
            }),
            dict({
              'card_type': 'CARD',
              'date': '1st January, 2023',
              'download_link': 'https://drive.google.com/uc?id=1-dcs0FEE05MTGiYbKqs9HnRdhXkgtIJG&export=download',
              'dpi': 600,
              'extension': 'png',
              'identifier': '1-dcs0FEE05MTGiYbKqs9HnRdhXkgtIJG',
              'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1-dcs0FEE05MTGiYbKqs9HnRdhXkgtIJG',
              'name': 'Mountain',
              'priority': 7,
              'searchq': 'mountain',
              'size': 5000000,
              'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1-dcs0FEE05MTGiYbKqs9HnRdhXkgtIJG',
              'source': 'example_drive_1',
              'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
              'source_id': 0,
              'source_name': 'Example Drive 1',
              'source_type': 'Google Drive',
              'source_verbose': 'Example Drive 1 but verbose',
            }),
            dict({
              'card_type': 'CARDBACK',
              'date': '1st January, 2023',
              'download_link': 'https://drive.google.com/uc?id=1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V&export=download',
              'dpi': 300,
              'extension': 'png',
              'identifier': '1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V',
              'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V',
              'name': 'Simple Cube',
              'priority': 17,
              'searchq': 'simple cube',
              'size': 2000000,
              'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V',
              'source': 'example_drive_1',
              'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
              'source_id': 0,
              'source_name': 'Example Drive 1',
              'source_type': 'Google Drive',
              'source_verbose': 'Example Drive 1 but verbose',
            }),
            dict({
              'card_type': 'CARD',
              'date': '1st January, 2023',
              'download_link': 'https://drive.google.com/uc?id=1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy&export=download',
              'dpi': 600,
              'extension': 'png',
              'identifier': '1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy',
              'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy',
              'name': 'Huntmaster of the Fells',
              'priority': 2,
              'searchq': 'huntmaster of fells',
              'size': 5000000,
              'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy',
              'source': 'example_drive_1',
              'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
              'source_id': 0,
              'source_name': 'Example Drive 1',
              'source_type': 'Google Drive',
              'source_verbose': 'Example Drive 1 but verbose',
            }),
          ]),
          'hits': 11,
          'pages': 2,
          'source': dict({
            'description': 'Description for example_drive_1',
            'external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
            'identifier': '1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
            'key': 'example_drive_1',
            'name': 'Example Drive 1',
            'pk': 0,
            'source_type': 'Google Drive',
          }),
        }),
        'example_drive_2': dict({
          'cards': list([
            dict({
              'card_type': 'CARDBACK',
              'date': '1st January, 2023',
              'download_link': 'https://drive.google.com/uc?id=1oigI6wz0zA--pNMuExKTs40kBNH6VRP_&export=download',
              'dpi': 300,
              'extension': 'png',
              'identifier': '1oigI6wz0zA--pNMuExKTs40kBNH6VRP_',
              'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1oigI6wz0zA--pNMuExKTs40kBNH6VRP_',
              'name': 'Simple Lotus',
              'priority': 7,
              'searchq': 'simple lotus',
              'size': 2000000,
              'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1oigI6wz0zA--pNMuExKTs40kBNH6VRP_',
              'source': 'example_drive_2',
              'source_external_link': None,
              'source_id': 1,
              'source_name': 'Example Drive 2',
              'source_type': 'Google Drive',
              'source_verbose': 'Example Drive 2 but verbose',
            }),
            dict({
              'card_type': 'CARD',
              'date': '1st January, 2023',
              'download_link': 'https://drive.google.com/uc?id=1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU&export=download',
              'dpi': 400,
              'extension': 'png',
              'identifier': '1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU',
              'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU',
              'name': 'Past in Flames',
              'priority': 2,
              'searchq': 'past in flames',
              'size': 4000000,
              'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU',
              'source': 'example_drive_2',
              'source_external_link': None,
              'source_id': 1,
              'source_name': 'Example Drive 2',
              'source_type': 'Google Drive',
              'source_verbose': 'Example Drive 2 but verbose',
            }),
          ]),
          'hits': 2,
          'pages': 1,
          'source': dict({
            'description': 'Description for example_drive_2',
            'external_link': None,
            'identifier': '18wZl7T9DU_lf2X5xYFiyH6pATVy8ZlOd',
            'key': 'example_drive_2',
            'name': 'Example Drive 2',
            'pk': 1,
            'source_type': 'Google Drive',
          }),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestNewCardsFirstPages.test_no_cards
  dict({
    'json': dict({
      'results': dict({
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestNewCardsFirstPages.test_no_data_in_date_range
  dict({
    'json': dict({
      'results': dict({
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestNewCardsFirstPages.test_no_sources
  dict({
    'json': dict({
      'results': dict({
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestNewCardsFirstPages.test_post_request
  dict({
    'content': b'Expected GET request.',
    'status_code': 400,
  })
# ---
# name: TestNewCardsPage.test_get_full_first_page
  dict({
    'json': dict({
      'cards': list([
        dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
          'name': 'Brainstorm',
          'priority': 2,
          'searchq': 'brainstorm',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
          'name': 'Island',
          'priority': 7,
          'searchq': 'island',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
          'name': 'Island (William Bradford)',
          'priority': 6,
          'searchq': 'island',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1-dcs0FEE05MTGiYbKqs9HnRdhXkgtIJG&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1-dcs0FEE05MTGiYbKqs9HnRdhXkgtIJG',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1-dcs0FEE05MTGiYbKqs9HnRdhXkgtIJG',
          'name': 'Mountain',
          'priority': 7,
          'searchq': 'mountain',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1-dcs0FEE05MTGiYbKqs9HnRdhXkgtIJG',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        dict({
          'card_type': 'CARDBACK',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V&export=download',
          'dpi': 300,
          'extension': 'png',
          'identifier': '1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V',
          'name': 'Simple Cube',
          'priority': 17,
          'searchq': 'simple cube',
          'size': 2000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy',
          'name': 'Huntmaster of the Fells',
          'priority': 2,
          'searchq': 'huntmaster of fells',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestNewCardsPage.test_get_full_second_page
  dict({
    'json': dict({
      'cards': list([
        dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1lv8WC1Xf1qxA7VHSc8jOtT5up6FwaBPH&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1lv8WC1Xf1qxA7VHSc8jOtT5up6FwaBPH',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1lv8WC1Xf1qxA7VHSc8jOtT5up6FwaBPH',
          'name': 'Ravager of the Fells',
          'priority': 2,
          'searchq': 'ravager of fells',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1lv8WC1Xf1qxA7VHSc8jOtT5up6FwaBPH',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1',
          'name': 'Past in Flames',
          'priority': 2,
          'searchq': 'past in flames',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=17fopRCNRge72U8Hac8pApHZtEalx5kHy&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '17fopRCNRge72U8Hac8pApHZtEalx5kHy',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=17fopRCNRge72U8Hac8pApHZtEalx5kHy',
          'name': 'Delver of Secrets',
          'priority': 2,
          'searchq': 'delver of secrets',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=17fopRCNRge72U8Hac8pApHZtEalx5kHy',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1mO73GTYlieP0kiZEkF58pJSrZTmC9lNh&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1mO73GTYlieP0kiZEkF58pJSrZTmC9lNh',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1mO73GTYlieP0kiZEkF58pJSrZTmC9lNh',
          'name': 'Insectile Aberration',
          'priority': 2,
          'searchq': 'insectile aberration',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1mO73GTYlieP0kiZEkF58pJSrZTmC9lNh',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        dict({
          'card_type': 'TOKEN',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'name': 'Goblin',
          'priority': 2,
          'searchq': 'goblin',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestNewCardsPage.test_get_partial_first_page
  dict({
    'json': dict({
      'cards': list([
        dict({
          'card_type': 'CARDBACK',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1oigI6wz0zA--pNMuExKTs40kBNH6VRP_&export=download',
          'dpi': 300,
          'extension': 'png',
          'identifier': '1oigI6wz0zA--pNMuExKTs40kBNH6VRP_',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1oigI6wz0zA--pNMuExKTs40kBNH6VRP_',
          'name': 'Simple Lotus',
          'priority': 7,
          'searchq': 'simple lotus',
          'size': 2000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1oigI6wz0zA--pNMuExKTs40kBNH6VRP_',
          'source': 'example_drive_2',
          'source_external_link': None,
          'source_id': 1,
          'source_name': 'Example Drive 2',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 2 but verbose',
        }),
        dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU&export=download',
          'dpi': 400,
          'extension': 'png',
          'identifier': '1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU',
          'name': 'Past in Flames',
          'priority': 2,
          'searchq': 'past in flames',
          'size': 4000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU',
          'source': 'example_drive_2',
          'source_external_link': None,
          'source_id': 1,
          'source_name': 'Example Drive 2',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 2 but verbose',
        }),
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestNewCardsPage.test_no_data_in_date_range
  dict({
    'json': dict({
      'cards': list([
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestNewCardsPage.test_post_request
  dict({
    'content': b'Expected GET request.',
    'status_code': 400,
  })
# ---
# name: TestNewCardsPage.test_response_to_malformed_json_body[invalid source]
  dict({
    'content': b'Invalid source key garbage specified.',
    'status_code': 400,
  })
# ---
# name: TestNewCardsPage.test_response_to_malformed_json_body[negative page]
  dict({
    'content': b'Invalid page -1 specified - must be between 1 and 2 for source example_drive_1.',
    'status_code': 400,
  })
# ---
# name: TestNewCardsPage.test_response_to_malformed_json_body[no page field]
  dict({
    'content': b'Page not specified.',
    'status_code': 400,
  })
# ---
# name: TestNewCardsPage.test_response_to_malformed_json_body[no params]
  dict({
    'content': b'Source not specified.',
    'status_code': 400,
  })
# ---
# name: TestNewCardsPage.test_response_to_malformed_json_body[no source field]
  dict({
    'content': b'Source not specified.',
    'status_code': 400,
  })
# ---
# name: TestNewCardsPage.test_response_to_malformed_json_body[non-number page]
  dict({
    'content': b'Invalid page specified.',
    'status_code': 400,
  })
# ---
# name: TestNewCardsPage.test_response_to_malformed_json_body[page out of range for source]
  dict({
    'content': b'Invalid page 10 specified - must be between 1 and 2 for source example_drive_1.',
    'status_code': 400,
  })
# ---
# name: TestNewCardsPage.test_response_to_malformed_json_body[zero page]
  dict({
    'content': b'Invalid page 0 specified - must be between 1 and 2 for source example_drive_1.',
    'status_code': 400,
  })
# ---
# name: TestPostCardbacks.test_get_multiple_rows_filtered_only_source_1
  dict({
    'json': dict({
      'cardbacks': list([
        '1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V',
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostCardbacks.test_get_multiple_rows_filtered_only_source_2
  dict({
    'json': dict({
      'cardbacks': list([
        '1oigI6wz0zA--pNMuExKTs40kBNH6VRP_',
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostCardbacks.test_get_multiple_rows_filtered_ordered_sources
  dict({
    'json': dict({
      'cardbacks': list([
        '1oigI6wz0zA--pNMuExKTs40kBNH6VRP_',
        '1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V',
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostCardbacks.test_get_multiple_rows_unfiltered
  dict({
    'json': dict({
      'cardbacks': list([
        '1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V',
        '1oigI6wz0zA--pNMuExKTs40kBNH6VRP_',
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostCardbacks.test_get_request
  dict({
    'content': b'Expected POST request.',
    'status_code': 400,
  })
# ---
# name: TestPostCardbacks.test_maximum_dpi_yielding_no_cardbacks
  dict({
    'json': dict({
      'cardbacks': list([
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostCardbacks.test_maximum_size_yielding_no_cardbacks
  dict({
    'json': dict({
      'cardbacks': list([
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostCardbacks.test_minimum_dpi_yielding_no_cardbacks
  dict({
    'json': dict({
      'cardbacks': list([
      ]),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostCardbacks.test_response_to_malformed_json_body[array json body]
  dict({
    'content': b"The provided JSON body is invalid:\n\n['test'] is not of type 'object'",
    'status_code': 400,
  })
# ---
# name: TestPostCardbacks.test_response_to_malformed_json_body[empty json body]
  dict({
    'content': b"The provided JSON body is invalid:\n\n'searchSettings' is a required property",
    'status_code': 400,
  })
# ---
# name: TestPostCardbacks.test_response_to_malformed_json_body[invalid search settings]
  dict({
    'content': b"The provided JSON body is invalid:\n\n'test2' is not of type 'object'",
    'status_code': 400,
  })
# ---
# name: TestPostCardbacks.test_response_to_malformed_json_body[search settings not specified]
  dict({
    'content': b"The provided JSON body is invalid:\n\n'searchSettings' is a required property",
    'status_code': 400,
  })
# ---
# name: TestPostCards.test_get_multiple_cards
  dict({
    'json': dict({
      'results': dict({
        '17fopRCNRge72U8Hac8pApHZtEalx5kHy': dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=17fopRCNRge72U8Hac8pApHZtEalx5kHy&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '17fopRCNRge72U8Hac8pApHZtEalx5kHy',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=17fopRCNRge72U8Hac8pApHZtEalx5kHy',
          'name': 'Delver of Secrets',
          'priority': 2,
          'searchq': 'delver of secrets',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=17fopRCNRge72U8Hac8pApHZtEalx5kHy',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA': dict({
          'card_type': 'TOKEN',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'name': 'Goblin',
          'priority': 2,
          'searchq': 'goblin',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostCards.test_get_single_card
  dict({
    'json': dict({
      'results': dict({
        '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA': dict({
          'card_type': 'TOKEN',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'name': 'Goblin',
          'priority': 2,
          'searchq': 'goblin',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostCards.test_page_equal_to_max_size
  dict({
    'json': dict({
      'results': dict({
        '17fopRCNRge72U8Hac8pApHZtEalx5kHy': dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=17fopRCNRge72U8Hac8pApHZtEalx5kHy&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '17fopRCNRge72U8Hac8pApHZtEalx5kHy',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=17fopRCNRge72U8Hac8pApHZtEalx5kHy',
          'name': 'Delver of Secrets',
          'priority': 2,
          'searchq': 'delver of secrets',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=17fopRCNRge72U8Hac8pApHZtEalx5kHy',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        '1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy': dict({
          'card_type': 'CARD',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy',
          'name': 'Huntmaster of the Fells',
          'priority': 2,
          'searchq': 'huntmaster of fells',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
        '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA': dict({
          'card_type': 'TOKEN',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'name': 'Goblin',
          'priority': 2,
          'searchq': 'goblin',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostCards.test_page_larger_than_max_size
  dict({
    'content': b"Malformed JSON body:\n\n['1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA', '17fopRCNRge72U8Hac8pApHZtEalx5kHy', '1991MWCur9NdAFi-tQQD5YbQj2oqV_WRy'] is too long",
    'status_code': 400,
  })
# ---
# name: TestPostCards.test_request_card_not_in_the_database
  dict({
    'json': dict({
      'results': dict({
        '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA': dict({
          'card_type': 'TOKEN',
          'date': '1st January, 2023',
          'download_link': 'https://drive.google.com/uc?id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA&export=download',
          'dpi': 600,
          'extension': 'png',
          'identifier': '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'medium_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w800-h800&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'name': 'Goblin',
          'priority': 2,
          'searchq': 'goblin',
          'size': 5000000,
          'small_thumbnail_url': 'https://drive.google.com/thumbnail?sz=w400-h400&id=1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          'source': 'example_drive_1',
          'source_external_link': 'https://drive.google.com/open?id=1Fu2nEymZhCpOOZkfF0XoZsVqdIWmPdNq',
          'source_id': 0,
          'source_name': 'Example Drive 1',
          'source_type': 'Google Drive',
          'source_verbose': 'Example Drive 1 but verbose',
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostCards.test_response_to_malformed_json_body[empty json body]
  dict({
    'content': b"Malformed JSON body:\n\n'card_identifiers' is a required property",
    'status_code': 400,
  })
# ---
# name: TestPostCards.test_response_to_malformed_json_body[invalid card_identifiers value]
  dict({
    'content': b'Malformed JSON body:\n\n"i should be a list but i ain\'t" is not of type \'array\'',
    'status_code': 400,
  })
# ---
# name: TestPostCards.test_response_to_malformed_json_body[missing card_identifiers entry]
  dict({
    'content': b"Malformed JSON body:\n\n'card_identifiers' is a required property",
    'status_code': 400,
  })
# ---
# name: TestPostImportSiteDecklist.test_get_request
  dict({
    'content': b'Expected POST request.',
    'status_code': 400,
  })
# ---
# name: TestPostImportSiteDecklist.test_invalid_url
  dict({
    'content': b'The specified decklist URL does not match any known import sites.',
    'status_code': 400,
  })
# ---
# name: TestPostImportSiteDecklist.test_response_to_malformed_json_body[empty json body]
  dict({
    'content': b"Malformed JSON body:\n\n'url' is a required property",
    'status_code': 400,
  })
# ---
# name: TestPostImportSiteDecklist.test_response_to_malformed_json_body[invalid url field name]
  dict({
    'content': b"Malformed JSON body:\n\n'url' is a required property",
    'status_code': 400,
  })
# ---
# name: TestPostImportSiteDecklist.test_response_to_malformed_json_body[malformed url]
  dict({
    'content': b'The specified decklist URL does not match any known import sites.',
    'status_code': 400,
  })
# ---
# name: TestPostImportSiteDecklist.test_valid_url[https://aetherhub.com/Deck/test-796905]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestPostImportSiteDecklist.test_valid_url[https://archidekt.com/decks/3380653]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestPostImportSiteDecklist.test_valid_url[https://cubecobra.com/cube/overview/2fj4]
  Counter({
    'Brainstorm': 4,
    'Delver of Secrets': 1,
    'Past in Flames': 3,
  })
# ---
# name: TestPostImportSiteDecklist.test_valid_url[https://decks.tcgplayer.com/magic/standard/mpc-autofill/test/1398367]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestPostImportSiteDecklist.test_valid_url[https://deckstats.net/decks/216625/2754468-test]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestPostImportSiteDecklist.test_valid_url[https://magic-ville.com/fr/decks/showdeck?ref=948045]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestPostImportSiteDecklist.test_valid_url[https://manastack.com/deck/test-426]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestPostImportSiteDecklist.test_valid_url[https://scryfall.com/@mpcautofill/decks/71bb2d40-c922-4a01-a63e-7ba2dde29a5c]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestPostImportSiteDecklist.test_valid_url[https://tappedout.net/mtg-decks/09-10-22-DoY-test]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestPostImportSiteDecklist.test_valid_url[https://www.moxfield.com/decks/D42-or9pCk-uMi4XzRDziQ]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestPostImportSiteDecklist.test_valid_url[https://www.mtggoldfish.com/deck/5149750]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestPostSearchResults.test_complex_search
  dict({
    'json': dict({
      'results': dict({
        'Brainstorm': dict({
          'CARD': list([
            '1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
          ]),
        }),
        'Goblin': dict({
          'TOKEN': list([
            '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          ]),
        }),
        'Island': dict({
          'CARD': list([
            '1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
            '1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
          ]),
        }),
        'Simple Cube': dict({
          'CARDBACK': list([
            '1JtXL6Ca9nQkvhwZZRR9ZuKA9_DzsFf1V',
          ]),
        }),
        'Simple Lotus': dict({
          'CARDBACK': list([
            '1oigI6wz0zA--pNMuExKTs40kBNH6VRP_',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_fuzzy_search
  dict({
    'json': dict({
      'results': dict({
        'past in': dict({
          'CARD': list([
            '1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1',
            '1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_get_request
  dict({
    'content': b'Expected POST request.',
    'status_code': 400,
  })
# ---
# name: TestPostSearchResults.test_maximum_dpi_yielding_no_search_results
  dict({
    'json': dict({
      'results': dict({
        'Simple Cube': dict({
          'CARDBACK': list([
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_maximum_size_yielding_fewer_search_results
  dict({
    'json': dict({
      'results': dict({
        'Past in Flames': dict({
          'CARD': list([
            '1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_minimum_dpi_yielding_fewer_search_results
  dict({
    'json': dict({
      'results': dict({
        'Past in Flames': dict({
          'CARD': list([
            '1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_minimum_dpi_yielding_no_search_results
  dict({
    'json': dict({
      'results': dict({
        'Simple Cube': dict({
          'CARDBACK': list([
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_page_equal_to_max_size
  dict({
    'json': dict({
      'results': dict({
        'Brainstorm': dict({
          'CARD': list([
            '1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
          ]),
        }),
        'Island': dict({
          'CARD': list([
            '1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
            '1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_page_larger_than_max_size
  dict({
    'content': b"The provided JSON body is invalid:\n\n[{'query': 'Brainstorm', 'card_type': 'CARD'}, {'query': 'Island', 'card_type': 'CARD'}, {'query': 'Simple Cube', 'card_type': 'CARDBACK'}] is too long",
    'status_code': 400,
  })
# ---
# name: TestPostSearchResults.test_priority_ordering_in_search_results
  dict({
    'json': dict({
      'results': dict({
        'Island': dict({
          'CARD': list([
            '1IDtqSjJ4Yo45AnNA4SplOiN7ewibifMa',
            '1HsvTYs1jFGe1c8U1PnNZ9aB8jkAW7KU0',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_response_to_malformed_json_body[empty json body]
  dict({
    'content': b"The provided JSON body is invalid:\n\n'searchSettings' is a required property",
    'status_code': 400,
  })
# ---
# name: TestPostSearchResults.test_response_to_malformed_json_body[gave it an array instead of an object]
  dict({
    'content': b"The provided JSON body is invalid:\n\n['test'] is not of type 'object'",
    'status_code': 400,
  })
# ---
# name: TestPostSearchResults.test_response_to_malformed_json_body[invalid card type field name]
  dict({
    'content': b"The provided JSON body is invalid:\n\n{'query': 'Brainstorm', 'card_type_garbage': 'CARD'} is not of type 'array'",
    'status_code': 400,
  })
# ---
# name: TestPostSearchResults.test_response_to_malformed_json_body[invalid card type]
  dict({
    'content': b"The provided JSON body is invalid:\n\n{'query': 'Brainstorm', 'card_type': 'garbage'} is not of type 'array'",
    'status_code': 400,
  })
# ---
# name: TestPostSearchResults.test_response_to_malformed_json_body[invalid query field name]
  dict({
    'content': b"The provided JSON body is invalid:\n\n{'query_garbage': 'Brainstorm', 'card_type': 'CARD'} is not of type 'array'",
    'status_code': 400,
  })
# ---
# name: TestPostSearchResults.test_response_to_malformed_json_body[queries not specified]
  dict({
    'content': b"The provided JSON body is invalid:\n\n'queries' is a required property",
    'status_code': 400,
  })
# ---
# name: TestPostSearchResults.test_response_to_malformed_json_body[search settings not specified]
  dict({
    'content': b"The provided JSON body is invalid:\n\n'test2' is not of type 'object'",
    'status_code': 400,
  })
# ---
# name: TestPostSearchResults.test_search_for_card_with_versions_from_two_sources
  dict({
    'json': dict({
      'results': dict({
        'Past in Flames': dict({
          'CARD': list([
            '1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1',
            '1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_search_for_card_with_versions_from_two_sources_under_reversed_search_order
  dict({
    'json': dict({
      'results': dict({
        'Past in Flames': dict({
          'CARD': list([
            '1dxSLHtw-VwwE09pZCA8OA6LbuWRZPEoU',
            '1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_search_for_card_with_versions_from_two_sources_with_all_sources_disabled
  dict({
    'json': dict({
      'results': dict({
        'Past in Flames': dict({
          'CARD': list([
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_search_for_card_with_versions_from_two_sources_with_one_source_disabled
  dict({
    'json': dict({
      'results': dict({
        'Past in Flames': dict({
          'CARD': list([
            '1UPdh7J7hScg4ZnxSPJ-EeBYHLp2s3Oz1',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_search_for_single_card
  dict({
    'json': dict({
      'results': dict({
        'Brainstorm': dict({
          'CARD': list([
            '1c4M-sK9gd0Xju0NXCPtqeTW_DQTldVU5',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_search_for_single_cardback
  dict({
    'json': dict({
      'results': dict({
        'Simple Lotus': dict({
          'CARDBACK': list([
            '1oigI6wz0zA--pNMuExKTs40kBNH6VRP_',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
# name: TestPostSearchResults.test_search_for_single_token
  dict({
    'json': dict({
      'results': dict({
        'Goblin': dict({
          'TOKEN': list([
            '1V5E0avDmNyEUuFfYwx3nA05aj-1HY0rA',
          ]),
        }),
      }),
    }),
    'status_code': 200,
  })
# ---
